; ModuleID = '/home/carl/AnghaBench/libuv/src/unix/extr_ibmi.c_uv_get_free_memory.c'
source_filename = "/home/carl/AnghaBench/libuv/src/unix/extr_ibmi.c_uv_get_free_memory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @uv_get_free_memory() #0 {
  %1 = alloca i64, align 8
  %2 = alloca %struct.TYPE_3__, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = call i64 @get_ibmi_system_status(%struct.TYPE_3__* %2)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %0
  store i64 0, i64* %1, align 8
  br label %26

9:                                                ; preds = %0
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %2, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  store i64 %11, i64* %3, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %2, i32 0, i32 1
  %13 = load i64, i64* %12, align 8
  %14 = mul i64 %13, 1024
  store i64 %14, i64* %4, align 8
  %15 = load i64, i64* %3, align 8
  %16 = load i64, i64* %4, align 8
  %17 = sub i64 %15, %16
  %18 = mul i64 %17, 1024
  store i64 %18, i64* %5, align 8
  %19 = load i64, i64* %5, align 8
  %20 = icmp ult i64 %19, 0
  br i1 %20, label %21, label %22

21:                                               ; preds = %9
  br label %24

22:                                               ; preds = %9
  %23 = load i64, i64* %5, align 8
  br label %24

24:                                               ; preds = %22, %21
  %25 = phi i64 [ 0, %21 ], [ %23, %22 ]
  store i64 %25, i64* %1, align 8
  br label %26

26:                                               ; preds = %24, %8
  %27 = load i64, i64* %1, align 8
  ret i64 %27
}

declare dso_local i64 @get_ibmi_system_status(%struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
